<resources>
    <string name="app_name">Badie Farzandi Assignment 2</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_in_image">Sign In Image</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_in">Sign In</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="confirmation_password">Confirmation Password</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="gender">Gender</string>
    <string name="send_message_to">Send Message To</string>
    <string name="sms">SMS</string>
    <string name="main_image">Main Image</string>
    <string name="welcome">Welcome</string>
    <string name="all_stories">All Stories</string>
    <string name="icon">Icon</string>
    <string name="my_stories">My Stories</string>
    <string name="profile">Profile</string>
    <string name="favorite_stories">Favorite Stories</string>
    <string name="import_export"><![CDATA[Import & Export]]></string>
    <string name="logout">Logout</string>
    <string name="name_label">Name:</string>
    <string name="email_label">Email:</string>
    <string name="gender_label">Gender:</string>
    <string name="send_to_label">Send to:</string>
    <string name="favorite_red_empty_icon">favorite red empty icon</string>
    <string name="title">Title</string>
    <string name="published_date">Published Date</string>
    <string name="calendar_icon">Calendar Icon</string>
    <string name="text">Text</string>
    <string name="save">Save</string>
    <string name="plus_icon">Plus Icon</string>
    <string name="import_export_import">Import</string>
    <string name="import_export_export">Export</string>
    <string name="story_image">Story Image</string>
    <string name="single_story_age_group_label">Age Group:</string>
    <string name="signle_story_published_date_label">Published Date:</string>
    <string name="single_activity_estimate_time_label">Estimate Time:</string>
    <string name="pick_image">Pick Image</string>
    <string name="appId">rR520m3HOqEYuMPR3KZyE7gbmec1ztlmmWF8U5EV</string>
    <string name="appKey">Mo6siWt4i0tO2IaWFGy5RnhV9OdgAMQTCmfunVio</string>
    <string name="hostUrl">https://parseapi.back4app.com</string>
    <string name="network_connection_error">Network connection error</string>
    <string name="network_json_error">Network json error</string>
    <string name="network_general_error">Network general error</string>
    <string name="user_signup_error">User signup error</string>
    <string name="user_signup_success">User signup success</string>
    <string name="login_invalid_inputs">Invalid or incomplete inputs</string>
    <string name="story_delete_access_denied">You are not allowed to remove this story</string>
</resources>