<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUp">

    <EditText
        android:id="@+id/signup_first_name_edt"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:autofillHints="name"
        android:hint="@string/first_name"
        android:inputType="text"
        app:layout_constraintLeft_toLeftOf="@id/guide_left"
        app:layout_constraintRight_toLeftOf="@id/signup_last_name_edt"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/signup_last_name_edt"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:autofillHints="name"
        android:hint="@string/last_name"
        android:inputType="text"
        app:layout_constraintLeft_toRightOf="@id/signup_first_name_edt"
        app:layout_constraintRight_toRightOf="@id/guide_right"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/signup_email_edt"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:autofillHints="emailAddress"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        app:layout_constraintBottom_toTopOf="@id/signup_password_edt"
        app:layout_constraintLeft_toLeftOf="@id/guide_left"
        app:layout_constraintRight_toRightOf="@id/guide_right"
        app:layout_constraintTop_toBottomOf="@id/signup_first_name_edt" />

    <EditText
        android:id="@+id/signup_password_edt"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:autofillHints="password"
        android:hint="@string/password"
        android:inputType="textPassword"
        app:layout_constraintBottom_toBottomOf="@id/signup_confirm_password_edt"
        app:layout_constraintLeft_toLeftOf="@id/guide_left"
        app:layout_constraintRight_toRightOf="@id/guide_right"
        app:layout_constraintTop_toBottomOf="@id/signup_email_edt" />

    <EditText
        android:id="@+id/signup_confirm_password_edt"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:autofillHints="password"
        android:hint="@string/confirmation_password"
        android:inputType="textPassword"
        app:layout_constraintBottom_toBottomOf="@id/half_horizontal_guide"
        app:layout_constraintLeft_toLeftOf="@id/guide_left"
        app:layout_constraintRight_toRightOf="@id/guide_right"
        app:layout_constraintTop_toBottomOf="@+id/signup_password_edt" />

    <TextView
        android:id="@+id/signup_gender_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/gender"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintLeft_toLeftOf="@id/guide_left"
        app:layout_constraintRight_toLeftOf="@id/signup_gender_rg"
        app:layout_constraintTop_toTopOf="@id/half_horizontal_guide" />

    <RadioGroup
        android:id="@+id/signup_gender_rg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="@id/signup_gender_tv"
        app:layout_constraintLeft_toRightOf="@id/signup_gender_tv"
        app:layout_constraintTop_toTopOf="@id/half_horizontal_guide">

        <RadioButton
            android:id="@+id/signup_male_gender_rb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/male" />

        <RadioButton
            android:id="@+id/signup_female_gender_rb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/female" />
    </RadioGroup>

    <TextView
        android:id="@+id/signup_send_message_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/send_message_to"
        app:layout_constraintLeft_toLeftOf="@id/guide_left"
        app:layout_constraintTop_toBottomOf="@id/signup_gender_tv" />

    <CheckBox
        android:id="@+id/signup_email_chb"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/email"
        app:layout_constraintLeft_toLeftOf="@id/guide_left"
        app:layout_constraintTop_toBottomOf="@id/signup_send_message_tv" />

    <CheckBox
        android:id="@+id/signup_sms_chb"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/sms"
        app:layout_constraintLeft_toLeftOf="@id/guide_left"
        app:layout_constraintTop_toBottomOf="@id/signup_email_chb" />

    <Button
        android:id="@+id/signup_signup_btn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/sign_up"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="@id/guide_left"
        app:layout_constraintRight_toRightOf="@id/guide_right" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guide_left"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="16dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guide_right"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="16dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/half_horizontal_guide"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent=".5" />

</androidx.constraintlayout.widget.ConstraintLayout>