<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/white"
        android:contentDescription="@string/sign_in_image"
        android:scaleType="fitXY"
        android:src="@drawable/images"
        app:layout_constraintBottom_toTopOf="@id/half_horizontal_guide"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/email_edt"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:autofillHints="emailAddress"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        app:layout_constraintBottom_toTopOf="@id/password_edt"
        app:layout_constraintTop_toBottomOf="@id/half_horizontal_guide"
        app:layout_constraintLeft_toLeftOf="@id/guide_left"
        app:layout_constraintRight_toRightOf="@id/guide_right"/>

    <EditText
        android:id="@+id/password_edt"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:autofillHints="password"
        android:hint="@string/password"
        android:inputType="textPassword"
        app:layout_constraintBottom_toTopOf="@id/signin_btn"
        app:layout_constraintTop_toBottomOf="@id/email_edt"
        app:layout_constraintLeft_toLeftOf="@id/guide_left"
        app:layout_constraintRight_toRightOf="@id/guide_right" />

    <Button
        android:id="@+id/signin_btn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/sign_in"
        app:layout_constraintBottom_toTopOf="@id/signup_btn"
        app:layout_constraintTop_toBottomOf="@id/password_edt"
        app:layout_constraintLeft_toLeftOf="@id/guide_left"
        app:layout_constraintRight_toRightOf="@id/guide_right"/>

    <Button
        android:id="@+id/signup_btn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/sign_up"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/signin_btn"
        app:layout_constraintLeft_toLeftOf="@id/guide_left"
        app:layout_constraintRight_toRightOf="@id/guide_right"/>


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/half_horizontal_guide"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent=".5" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guide_left"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="16dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guide_right"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="16dp" />

</androidx.constraintlayout.widget.ConstraintLayout>