<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/profile_dialog_name_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name_label"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/profile_dialog_email_label"/>

    <TextView
        android:id="@+id/profile_dialog_name_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toRightOf="@id/profile_dialog_name_label"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/profile_dialog_email_tv"/>

    <TextView
        android:id="@+id/profile_dialog_email_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email_label"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/profile_dialog_name_label"
        app:layout_constraintBottom_toTopOf="@id/profile_dialog_gender_label"/>

    <TextView
        android:id="@+id/profile_dialog_email_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toRightOf="@id/profile_dialog_email_label"
        app:layout_constraintTop_toBottomOf="@id/profile_dialog_name_tv"
        app:layout_constraintBottom_toTopOf="@id/profile_dialog_gender_tv"/>

    <TextView
        android:id="@+id/profile_dialog_gender_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/gender_label"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/profile_dialog_email_label"
        app:layout_constraintBottom_toTopOf="@id/profile_dialog_send_to_label"/>

    <TextView
        android:id="@+id/profile_dialog_gender_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/profile_dialog_send_to_tv"
        app:layout_constraintLeft_toRightOf="@id/profile_dialog_gender_label"
        app:layout_constraintTop_toBottomOf="@id/profile_dialog_email_tv" />

    <TextView
        android:id="@+id/profile_dialog_send_to_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/send_to_label"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/profile_dialog_gender_label" />

    <TextView
        android:id="@+id/profile_dialog_send_to_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="@id/profile_dialog_send_to_label"
        app:layout_constraintTop_toBottomOf="@id/profile_dialog_gender_tv" />


</androidx.constraintlayout.widget.ConstraintLayout>